[gd_scene load_steps=14 format=2]

[ext_resource path="res://Components/Guard/Assets/body.png" type="Texture" id=1]
[ext_resource path="res://Components/Guard/Assets/head.png" type="Texture" id=2]
[ext_resource path="res://Components/Guard/Assets/hat.png" type="Texture" id=3]
[ext_resource path="res://Components/Guard/Assets/flashlight.png" type="Texture" id=4]
[ext_resource path="res://Components/Guard/Assets/hand.png" type="Texture" id=5]
[ext_resource path="res://Components/Guard/Assets/fire.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/fov.png" type="Texture" id=7]
[ext_resource path="res://Components/Guard/Guard.gd" type="Script" id=8]
[ext_resource path="res://Components/Guard/Assets/gun.png" type="Texture" id=9]
[ext_resource path="res://Components/Guard/Assets/exclamation.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Body/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2.01215, -2.68288 ), Vector2( -2.01215, -2.68288 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/Body/Hand:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 5.13836 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visual/Body/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.800873, -37.3121 ), Vector2( 0.800873, -33.0685 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visual/Body/Gun/Exclamation:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.435275, 1 ),
"update": 0,
"values": [ Vector2( -40.4347, -112.6 ), Vector2( -40.3565, -121.166 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shoot"
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Body/Gun:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Guard" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Visual" type="Node2D" parent="."]
scale = Vector2( 0.4, 0.4 )

[node name="Body" type="Sprite" parent="Visual"]
texture = ExtResource( 1 )

[node name="Head" type="Sprite" parent="Visual/Body"]
position = Vector2( 0.800873, -37.3121 )
texture = ExtResource( 2 )

[node name="Hat" type="Sprite" parent="Visual/Body/Head"]
position = Vector2( 3.45604, -16.6107 )
scale = Vector2( 1.07862, 1 )
texture = ExtResource( 3 )

[node name="Hand" type="Sprite" parent="Visual/Body"]
position = Vector2( -2.01215, -2.68288 )
scale = Vector2( 0.763277, 0.684367 )
texture = ExtResource( 5 )

[node name="Flashlight" type="Sprite" parent="Visual/Body/Hand"]
show_behind_parent = true
position = Vector2( 4.74082, 0.357882 )
scale = Vector2( 1.31014, 1.4612 )
texture = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="Visual/Body/Hand/Flashlight"]
show_behind_parent = true
position = Vector2( 5.91283, -0.272655 )
rotation = 1.58063
scale = Vector2( 1, 2.81081 )
texture = ExtResource( 7 )
offset = Vector2( -5.77789, -148.903 )
shadow_enabled = true

[node name="Gun" type="Sprite" parent="Visual/Body"]
visible = false
position = Vector2( 40.4347, -7.66536 )
texture = ExtResource( 9 )

[node name="Hand" type="Sprite" parent="Visual/Body/Gun"]
position = Vector2( -13.4144, 2.49123 )
scale = Vector2( 0.729458, 0.706913 )
texture = ExtResource( 5 )

[node name="Hand2" type="Sprite" parent="Visual/Body/Gun"]
show_behind_parent = true
position = Vector2( 9.77335, 0.766544 )
scale = Vector2( 0.819639, 0.797094 )
texture = ExtResource( 5 )

[node name="Flashlight" type="Sprite" parent="Visual/Body/Gun/Hand2"]
show_behind_parent = true
position = Vector2( 14.4188, 1.30529 )
texture = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="Visual/Body/Gun/Hand2/Flashlight"]
show_behind_parent = true
position = Vector2( 6.29587, -0.268888 )
rotation = 1.58063
scale = Vector2( 1, 3.16014 )
texture = ExtResource( 7 )
offset = Vector2( -5.77789, -148.903 )
color = Color( 0.470588, 0, 0, 1 )
energy = 2.0
shadow_enabled = true

[node name="Exclamation" type="Sprite" parent="Visual/Body/Gun"]
position = Vector2( -40.4347, -112.6 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )
offset = Vector2( 0.196958, 1.86684 )

[node name="Fov" type="RayCast2D" parent="Visual"]
position = Vector2( 26.4047, -2.82907 )
enabled = true
cast_to = Vector2( 800, 0 )

[node name="AlarmTimeout" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sfx" type="Node" parent="."]

[node name="Fire" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/Shoot = SubResource( 3 )
[connection signal="timeout" from="AlarmTimeout" to="." method="_on_AlarmTimeout_timeout"]
